Fix footer spacing

--- a/css/footer.css
+++ b/css/footer.css
@@ -1,6 +1,6 @@
 #footer {
     background-color: #2E2F42;
-    padding: 100px 0;
+    padding: 100px 156px;
 }
 
 #footer a {
